RESOLVED FIXED237456
[Cocoa] Crash in MediaPlayerPrivateAVFoundationObjC::createAVAssetForURL
https://bugs.webkit.org/show_bug.cgi?id=237456
Summary [Cocoa] Crash in MediaPlayerPrivateAVFoundationObjC::createAVAssetForURL
Eric Carlson
Reported 2022-03-03 16:46:40 PST
Sometimes see a crash in MediaPlayerPrivateAVFoundationObjC::createAVAssetForURL when creating an AtomString from a compile-time const char*
Attachments
Patch (6.14 KB, patch)
2022-03-03 17:05 PST, Eric Carlson
no flags
Patch (5.89 KB, patch)
2022-03-03 17:12 PST, Eric Carlson
no flags
Patch for landing (5.90 KB, patch)
2022-03-03 17:31 PST, Eric Carlson
no flags
Eric Carlson
Comment 1 2022-03-03 16:46:59 PST
Eric Carlson
Comment 2 2022-03-03 17:05:22 PST
Eric Carlson
Comment 3 2022-03-03 17:12:26 PST
Jer Noble
Comment 4 2022-03-03 17:15:49 PST
Comment on attachment 453799 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=453799&action=review > Source/WebCore/platform/graphics/avfoundation/MediaPlayerPrivateAVFoundation.cpp:1082 > +bool MediaPlayerPrivateAVFoundation::enableInheritURIQueryComponent() const Nit: maybe shouldEnableInheritURIQueryComponent()?
Eric Carlson
Comment 5 2022-03-03 17:31:04 PST
Created attachment 453801 [details] Patch for landing
EWS
Comment 6 2022-03-04 10:47:30 PST
Committed r290837 (248073@main): <https://commits.webkit.org/248073@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 453801 [details].
Note You need to log in before you can comment on or make changes to this bug.