Source/WebCore/platform/graphics/avfoundation/cf/MediaPlayerPrivateAVFoundationCF.cpp
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2011-2015 Apple Inc. All rights reserved.
+ * Copyright (C) 2011-2022 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -507,10 +507,8 @@ void MediaPlayerPrivateAVFoundationCF::createAVAssetForURL(const URL& url)
 
     setDelayCallbacks(true);
 
-    bool inheritURI = player()->doesHaveAttribute("x-itunes-inherit-uri-query-component");
-
     m_avfWrapper = new AVFWrapper(this);
-    m_avfWrapper->createAssetForURL(url, inheritURI);
+    m_avfWrapper->createAssetForURL(url, shouldEnableInheritURIQueryComponent());
     setDelayCallbacks(false);
     m_avfWrapper->checkPlayability();
 }
